fix comment in FeatureResource; migrate from vue-multiselect to vue-select;

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,4 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "~vue-multiselect/dist/vue-multiselect.min.css";
+@import "~vue-select/src/scss/vue-select.scss";
